exports[`invalid(1): {\"exports\": {\"./sub\": \"./sub.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./sub": "./sub.js"}}

`;

exports[`invalid(1): {\"exports\": {\"./sub\": \"./sub.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./sub": "./sub.js"}}
    |             ^^^^^^^^^^^^^^^^^^^^^ \`exports\` has subpaths but no \`.\` root entry, so the package cannot be imported by its name.

`;

exports[`invalid(2): {\n\t\t\t\"exports\": {\n\t\t\t\t\"./sub\": \"./sub.js\",\n\t\t\t\t\"./package.json\": \"./package.json\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"exports": {
  3 | 				"./sub": "./sub.js",
  4 | 				"./package.json": "./package.json"
  5 | 			}
  6 | 		}

`;

exports[`invalid(2): {\n\t\t\t\"exports\": {\n\t\t\t\t\"./sub\": \"./sub.js\",\n\t\t\t\t\"./package.json\": \"./package.json\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
> 2 | 			"exports": {
    | 			           ^
> 3 | 				"./sub": "./sub.js",
    | ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 				"./package.json": "./package.json"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 			}
    | ^^^^ \`exports\` has subpaths but no \`.\` root entry, so the package cannot be imported by its name.
  6 | 		}

`;

exports[`invalid(3): {\"exports\": {\".\": null}} 1`] = `

[Input]
  1 | {"exports": {".": null}}

`;

exports[`invalid(3): {\"exports\": {\".\": null}} 2`] = `

Message:
> 1 | {"exports": {".": null}}
    |                   ^^^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(4): {\"exports\": {\".\": {\"types\": \"./index.d.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./index.d.ts"}}}

`;

exports[`invalid(4): {\"exports\": {\".\": {\"types\": \"./index.d.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./index.d.ts"}}}
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(5): {\"main\": \"./index.js\", \"exports\": {\".\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"main": "./index.js", "exports": {".": "./index.mjs"}}

`;

exports[`invalid(5): {\"main\": \"./index.js\", \"exports\": {\".\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"main": "./index.js", "exports": {".": "./index.mjs"}}
    |                                         ^^^^^^^^^^^^^ The \`exports\` root does not expose the package \`main\` entry point \`./index.js\`.

`;
